--- a/templates/about.html
+++ b/templates/about.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>About</title>
-</head>
-<body>
-<h1>This page is about us</h1>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block title %}
+Մեր մասին
+{% endblock %}
+
+{% block body %}
+Էջ մեր մասին:
+{% endblock %}
