--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Main page</title>
-</head>
-<body>
-<h1>This is my main page</h1>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block title %}
+Գլխավոր
+{% endblock %}
+
+{% block body %}
+Հիմնական էջի պարունակություն:
+{% endblock %}
