--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
 	<title>{% block title %}{% endblock %}</title>
 </head>
 <body>
-	{% block body %}{% endblock %}
+<header>The Site</header>
+{% block body %}{% endblock %}
 </body>
 </html>
